# prototipo_arch_text_to_sql

./: .env  README.md  index.html  main.py  pyproject.toml
core/: llm_factory.py  observability.py  pipeline.py
src/core/: __init__.py
src/infrastructure/database/: __init__.py
src/infrastructure/embeddings/: __init__.py
src/infrastructure/llm/: __init__.py  llm_factory.py
src/infrastructure/vectorstores/: __init__.py
src/pipelines/: __init__.py
src/pipelines/router/: router_chain.py  router_prompt.py  schemas.py
src/services/: chat_service.py
stages/: answer_generator.py  retrieval.py  sql_agent.py
