[project]
name = "prototipo-text-to-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "llama-index>=0.12.52",
    "loguru>=0.7.3",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]
